add test service delete/update/get